Fix falling metal pipe instrument on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -284,7 +284,7 @@ select#select-instrument option {
   background-image: url(../images/metalpipe.png)
 }
 
-.instruments>#keyboard, .instruments>#cymbal, .instruments>#marimba, .instruments>#tambourine, .instruments>#cowbell {
+.instruments>#keyboard, .instruments>#cymbal, .instruments>#marimba, .instruments>#tambourine, .instruments>#cowbell, .instruments>#metalpipe {
   visibility: hidden
 }
 
